2008-11-07  Sergei Gavrikov <sergei.gavrikov@gmail.com>

	* cdl/cl_cs8900a_eth_drivers.cdl: Added
	CYGIMP_DEVS_ETH_CL_CS8900A_DATABUS_8BIT option to manage chip in 8-bit
	mode.
	* include/cs8900.h
	* src/if_cs8900a.c: Added a support for the 8-bit access for CS8900A.
	All access to CS8900A registers wrapped via CS_IN, CS_OUT macros (the
	macros were defined in past, but, still not used).  In common way the
	macros use the eCos macros: HAL_READ_UINT16, HAL_WRITE_UINT16 , but,
	in other (rare) conditions they can use 8-bit access too.

2007-09-04  Stephen Finney <shf@pfinc.com>

	* add timeout to potential infinite loop in cs8900a_send per 
	bugzilla report 1000281

2005-11-10  Laurent Gonzalez <laurent.gonzalez@trango-systems.com>

	* include/cs8900a.h:
	* src/if_cs8900a.c: Added a priority field in cpd
	that makes interrupt priority configurable

2005-05-04  Ian Campbell  <icampbell@arcom.com>

	* cdl/cl_cs8900a_eth_drivers.cdl: Added
	CYGSEM_DEVS_ETH_CL_CS8900A_WRITE_EEPROM

	* src/if_cs8900a.c: Added debug statements to print out where the
	driver is obtaining its ESA from. Implement
	ETH_DRV_SET_MAC_ADDRESS and ETH_DRV_GET_MAC_ADDRESS.

2004-06-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/if_cs8900a.c: Added missing include of cyg_ass.h.

2004-05-07  Bob Koninckx <bob.koninckx@o-3s.com>
	* src/if_cs8900a.c: Drop "ghost" frames with zero length

2004-04-19  Bob Koninckx <bob.koninckx@o-3s.com>
	* src/if_cs8900a.c: function cs8900a_int_vector, return the vector
	instead of a boolean.

2004-04-08  Bob Koninckx <bob.koninckx@o-3s.com>
	* cdl/cl_cs8900a_eth_drivers.cdl
	* include/if_cs8900a.c
	* src/if_cs8900a.c: Made hardware swapping or software swapping of
    data bytes (mostly relevant to big endian machines) a configuration
    option

2003-11-05  Bob Koninckx <bob.koninckx@mech.kuleuven.ac.be>

	* src/if_cs8900a.c: Fix handling of odd bytes on big endian machines

2003-04-12  Jonathan Larmour  <jifl@eCosCentric.com>
